// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basicDonut 1`] = `
{
  "annotation": {},
  "chartType": "donut",
  "config": {
    "donut": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelLayout": "labelLine",
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showDimension": true,
        "showValue": true,
        "showValuePercent": true,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "donut": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelLayout": "labelLine",
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showDimension": true,
          "showValue": true,
          "showValuePercent": true,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-销售额-sales",
      "__Dim_Color__": "2019-销售额",
      "__Dim_Detail__": "2019-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10000,
        "sales": 200000,
      },
      "date": "2019",
      "sales": 200000,
    },
    {
      "__Dim_ColorId__": "2019-利润-profit",
      "__Dim_Color__": "2019-利润",
      "__Dim_Detail__": "2019-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10000,
        "sales": 200000,
      },
      "date": "2019",
      "profit": 10000,
    },
    {
      "__Dim_ColorId__": "2020-销售额-sales",
      "__Dim_Color__": "2020-销售额",
      "__Dim_Detail__": "2020-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "date": "2020",
        "profit": 20000,
        "sales": 400000,
      },
      "date": "2020",
      "sales": 400000,
    },
    {
      "__Dim_ColorId__": "2020-利润-profit",
      "__Dim_Color__": "2020-利润",
      "__Dim_Detail__": "2020-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "date": "2020",
        "profit": 20000,
        "sales": 400000,
      },
      "date": "2020",
      "profit": 20000,
    },
    {
      "__Dim_ColorId__": "2021-销售额-sales",
      "__Dim_Color__": "2021-销售额",
      "__Dim_Detail__": "2021-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30000,
        "sales": 600000,
      },
      "date": "2021",
      "sales": 600000,
    },
    {
      "__Dim_ColorId__": "2021-利润-profit",
      "__Dim_Color__": "2021-利润",
      "__Dim_Detail__": "2021-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30000,
        "sales": 600000,
      },
      "date": "2021",
      "profit": 30000,
    },
    {
      "__Dim_ColorId__": "2022-销售额-sales",
      "__Dim_Color__": "2022-销售额",
      "__Dim_Detail__": "2022-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "date": "2022",
        "profit": 40000,
        "sales": 800000,
      },
      "date": "2022",
      "sales": 800000,
    },
    {
      "__Dim_ColorId__": "2022-利润-profit",
      "__Dim_Color__": "2022-利润",
      "__Dim_Detail__": "2022-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "date": "2022",
        "profit": 40000,
        "sales": 800000,
      },
      "date": "2022",
      "profit": 40000,
    },
    {
      "__Dim_ColorId__": "2023-销售额-sales",
      "__Dim_Color__": "2023-销售额",
      "__Dim_Detail__": "2023-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "date": "2023",
        "profit": 50000,
        "sales": 1000000,
      },
      "date": "2023",
      "sales": 1000000,
    },
    {
      "__Dim_ColorId__": "2023-利润-profit",
      "__Dim_Color__": "2023-利润",
      "__Dim_Detail__": "2023-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "date": "2023",
        "profit": 50000,
        "sales": 1000000,
      },
      "date": "2023",
      "profit": 50000,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 10,
          "max": 1000000,
          "min": 10000,
          "sum": 3150000,
        },
      },
      "id": "donut",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-利润-profit": "2019-利润",
          "2019-销售额-sales": "2019-销售额",
          "2020-利润-profit": "2020-利润",
          "2020-销售额-sales": "2020-销售额",
          "2021-利润-profit": "2021-利润",
          "2021-销售额-sales": "2021-销售额",
          "2022-利润-profit": "2022-利润",
          "2022-销售额-sales": "2022-销售额",
          "2023-利润-profit": "2023-利润",
          "2023-销售额-sales": "2023-销售额",
        },
        "colorItems": [
          "2019-销售额-sales",
          "2019-利润-profit",
          "2020-销售额-sales",
          "2020-利润-profit",
          "2021-销售额-sales",
          "2021-利润-profit",
          "2022-销售额-sales",
          "2022-利润-profit",
          "2023-销售额-sales",
          "2023-利润-profit",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "id": "date",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "sales",
      "profit",
    ],
    "color": [
      "date",
      "__MeaName__",
    ],
    "column": [],
    "detail": [
      "date",
      "__MeaName__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "alias": "销售额",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "利润",
      "autoFormat": false,
      "format": {
        "decimalPlaces": 0,
        "prefix": "利润",
        "ratio": 1000,
        "suffix": "$",
        "symbol": "千",
        "thousandSeparator": true,
        "type": "number",
      },
      "id": "profit",
    },
  ],
}
`;

exports[`basicDonut 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "2019-销售额-sales",
      "2019-利润-profit",
      "2020-销售额-sales",
      "2020-利润-profit",
      "2021-销售额-sales",
      "2021-利润-profit",
      "2022-销售额-sales",
      "2022-利润-profit",
      "2023-销售额-sales",
      "2023-利润-profit",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "donut",
    "values": [
      {
        "__Dim_ColorId__": "2019-销售额-sales",
        "__Dim_Color__": "2019-销售额",
        "__Dim_Detail__": "2019-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10000,
          "sales": 200000,
        },
        "date": "2019",
        "sales": 200000,
      },
      {
        "__Dim_ColorId__": "2019-利润-profit",
        "__Dim_Color__": "2019-利润",
        "__Dim_Detail__": "2019-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10000,
          "sales": 200000,
        },
        "date": "2019",
        "profit": 10000,
      },
      {
        "__Dim_ColorId__": "2020-销售额-sales",
        "__Dim_Color__": "2020-销售额",
        "__Dim_Detail__": "2020-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "date": "2020",
          "profit": 20000,
          "sales": 400000,
        },
        "date": "2020",
        "sales": 400000,
      },
      {
        "__Dim_ColorId__": "2020-利润-profit",
        "__Dim_Color__": "2020-利润",
        "__Dim_Detail__": "2020-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "date": "2020",
          "profit": 20000,
          "sales": 400000,
        },
        "date": "2020",
        "profit": 20000,
      },
      {
        "__Dim_ColorId__": "2021-销售额-sales",
        "__Dim_Color__": "2021-销售额",
        "__Dim_Detail__": "2021-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30000,
          "sales": 600000,
        },
        "date": "2021",
        "sales": 600000,
      },
      {
        "__Dim_ColorId__": "2021-利润-profit",
        "__Dim_Color__": "2021-利润",
        "__Dim_Detail__": "2021-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30000,
          "sales": 600000,
        },
        "date": "2021",
        "profit": 30000,
      },
      {
        "__Dim_ColorId__": "2022-销售额-sales",
        "__Dim_Color__": "2022-销售额",
        "__Dim_Detail__": "2022-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "date": "2022",
          "profit": 40000,
          "sales": 800000,
        },
        "date": "2022",
        "sales": 800000,
      },
      {
        "__Dim_ColorId__": "2022-利润-profit",
        "__Dim_Color__": "2022-利润",
        "__Dim_Detail__": "2022-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "date": "2022",
          "profit": 40000,
          "sales": 800000,
        },
        "date": "2022",
        "profit": 40000,
      },
      {
        "__Dim_ColorId__": "2023-销售额-sales",
        "__Dim_Color__": "2023-销售额",
        "__Dim_Detail__": "2023-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "date": "2023",
          "profit": 50000,
          "sales": 1000000,
        },
        "date": "2023",
        "sales": 1000000,
      },
      {
        "__Dim_ColorId__": "2023-利润-profit",
        "__Dim_Color__": "2023-利润",
        "__Dim_Detail__": "2023-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "date": "2023",
          "profit": 50000,
          "sales": 1000000,
        },
        "date": "2023",
        "profit": 50000,
      },
    ],
  },
  "innerRadius": 0.6400000000000001,
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "layout": {
      "align": "labelLine",
    },
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "large": false,
  "largeThreshold": Infinity,
  "legends": {
    "autoPage": true,
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
          "unSelectedHover": {
            "fill": null,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "state": {
          "unSelected": {
            "fill": "#646A73",
            "fillOpacity": 0.8,
          },
        },
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "state": {
          "unSelected": {
            "fillOpacity": 1,
            "opacity": 0.2,
          },
        },
        "style": [Function],
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.8,
  "padding": 0,
  "pie": {
    "state": {
      "hover": {
        "outerRadius": 0.8800000000000001,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "transparent",
    },
  },
  "progressiveStep": 400,
  "progressiveThreshold": Infinity,
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "pie",
  "valueField": "__MeaValue__",
}
`;

exports[`basicDonut 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "2019-利润-profit": "2019-利润",
    "2019-销售额-sales": "2019-销售额",
    "2020-利润-profit": "2020-利润",
    "2020-销售额-sales": "2020-销售额",
    "2021-利润-profit": "2021-利润",
    "2021-销售额-sales": "2021-销售额",
    "2022-利润-profit": "2022-利润",
    "2022-销售额-sales": "2022-销售额",
    "2023-利润-profit": "2023-利润",
    "2023-销售额-sales": "2023-销售额",
  },
  "colorItems": [
    {
      "alias": "2019-销售额",
      "id": "2019-销售额-sales",
    },
    {
      "alias": "2019-利润",
      "id": "2019-利润-profit",
    },
    {
      "alias": "2020-销售额",
      "id": "2020-销售额-sales",
    },
    {
      "alias": "2020-利润",
      "id": "2020-利润-profit",
    },
    {
      "alias": "2021-销售额",
      "id": "2021-销售额-sales",
    },
    {
      "alias": "2021-利润",
      "id": "2021-利润-profit",
    },
    {
      "alias": "2022-销售额",
      "id": "2022-销售额-sales",
    },
    {
      "alias": "2022-利润",
      "id": "2022-利润-profit",
    },
    {
      "alias": "2023-销售额",
      "id": "2023-销售额-sales",
    },
    {
      "alias": "2023-利润",
      "id": "2023-利润-profit",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
